--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "homepage": "",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.4.3",
     "@paypal/react-paypal-js": "^7.8.2",
     "@reduxjs/toolkit": "^1.9.1",
     "@stripe/react-stripe-js": "^1.16.1",
@@ -12,12 +16,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "dotenv": "^16.0.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.4.2",
-    "@mui/material": "^5.4.3",
     "react-dom": "^18.2.0",
     "react-phone-number-input": "^3.2.19",
     "react-redux": "^8.0.5",
