--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-NODE_ENV=development
+REACT_APP_NODE_ENV=development
 
-APP_API_URl="http://localhost:9700/api/"
-APP_API_BASE_URL="http://localhost:9700/"
+REACT_APP_APP_API_URl=http://localhost:9700/api/
+REACT_APP_APP_API_BASE_URL=http://localhost:9700/
 
-NEWS_API_URL="https://newsapi.org/v2/"
+REACT_APP_NEWS_API_URL=https://newsapi.org/v2/
